<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AAA Companion App</string>
    <string name="app_market_address">market://details?id=com.sage42.androidappaddicts.app</string>
    <string name="about_app_version_default">1.0</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share App</string>
    <string name="action_about">About</string>
    <string name="main_hello_world">Hello world!</string>
    <string name="main_click_me">Click me</string>
    <string name="search_hint">Search</string>
    <string name="main_ouch">Ouch!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fragment_title">App List</string>
    <string name="fragment_category_title">by Category</string>
    <string name="fragment_episode_title">by Episode</string>
    <string name="fragment_suggest_title">Suggest an App</string>
    <string name="fragment_host_title">Host of Android App Addicts</string>
    <string name="about_title">About</string>
    <string name="about_company_photo">Sage42 Logo</string>
    <string name="about_desc">Sage 42</string>
    <string name="about_call">Call the show</string>
    <string name="about_call_number">0123456789</string>
    <string name="about_email">Email Android Addicts</string>
    <string name="about_email_address">noidea@idea.com</string>
    <string name="about_follow_us">Follow Us in G+</string>
    <string name="about_follow_us_address">follow us address</string>
    <string name="about_participate">Participate in Our Forum</string>
    <string name="about_participate_address">Participate in Our Forum</string>
    <string name="settings_title">Settings</string>
    <string name="settings_1">settings 1</string>
    <string name="settings_2">settings 2</string>
    <string name="settings_3">settings 3</string>
    <string name="settings_4">settings 4</string>
    <string name="settings_5">settings 5</string>
    <string name="settings_6">settings 6</string>
    <string name="settings_7">settings 7</string>
    <string name="settings_8">settings 8</string>

</resources>