<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/about_top_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/about_company_photo"
                android:src="@drawable/ic_launcher" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:background="#70ffffff" >

                <TextView
                    style="@style/AppTheme.About.TopPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/about_version"
                    style="@style/AppTheme.About.TopPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/about_app_version_default" />
            </RelativeLayout>

            <TextView
                style="@style/AppTheme.About.TopPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/about_top_panel"
            android:layout_marginBottom="@dimen/std_padding"
            android:orientation="vertical" >

            <View
                style="@style/AppTheme.About.Hr"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/about_hotline"
                style="@style/AppTheme.About.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/light_ic_phone"
                android:text="@string/about_call" />

            <View
                style="@style/AppTheme.About.Hr"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/about_email"
                style="@style/AppTheme.About.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/light_ic_mail"
                android:text="@string/about_email" />

            <View
                style="@style/AppTheme.About.Hr"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/about_facebook"
                style="@style/AppTheme.About.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_social"
                android:text="@string/about_follow_us" />

            <View
                style="@style/AppTheme.About.Hr"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/about_web"
                style="@style/AppTheme.About.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_social"
                android:text="@string/about_participate" />

            <View
                style="@style/AppTheme.About.Hr"
                android:layout_width="match_parent" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>